Added uploading image functionality

--- a/config/config.env
+++ b/config/config.env
@@ -2,3 +2,6 @@ PORT=4200
 MONGO_URI=mongodb+srv://himanshu:himanshu@cluster0.d6kwh8p.mongodb.net/memory?retryWrites=true&w=majority
 GOOGLE_CLIENT_ID=71363137851-g9clrtkqka21ddcknd8cjk0v5tpblakb.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+CLOUDINARY_CLOUD_NAME=dsghaipcy
+CLOUDINARY_KEY=743684116655538
+CLOUDINARY_SECRET=DnidmN199hdkmh0QzFS87HhJZTw
